--- a/templates/login.html
+++ b/templates/login.html
@@ -12,8 +12,10 @@
     <form class="form-signin" action="/signup" method="post">
       <h4 class="form-signin-heading">New here? Sign up!</h4>
       <p>Enter your columbia email and we'll email you login details</p>
-      <label for="inputEmail" class="sr-only">Columbia email address</label>
+      <label for="inputEmail">Columbia email address</label>
       <input type="email" name="email" id="inputEmail" class="form-control" placeholder="foo.bar@columbia.edu" required>
+      <label for="inputEmail">Nickname</label>
+      <input type="text" name="name" id="inputname" class="form-control" placeholder="darkl0rD" required>
       <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
     </form>
 {% endblock %}
