--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,14 @@
   </head>
   <body>
     <div class="container">
+      {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+          {% for category, message in messages %}
+          <div class="alert alert-{{category}}" role="alert">{{ message }}</div>
+          {% endfor %}
+          </ul>
+        {% endif %}
+      {% endwith %}
       {% block content %} {% endblock %}
     </div>
 
