--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,14 +1,8 @@
 .form-signin {
-  max-width: 330px;
-  padding: 15px;
-  margin: 0 auto;
+  max-width: 500px;
 }
-.form-signin .form-signin-heading,
-.form-signin .checkbox {
-  margin-bottom: 10px;
-}
-.form-signin .checkbox {
-  font-weight: normal;
+.form-signin label{
+    margin: 10px 0px;
 }
 .form-signin .form-control {
   position: relative;
@@ -27,8 +21,25 @@
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
-.form-signin input[type="password"] {
+.form-signin input[type="password"],
+.form-signin input[type="text"] {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
+}
+/* Custom page header */
+.header {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #e5e5e5;
+}
+/* Make the masthead heading the same height as the navigation */
+.header h3 {
+  margin-top: 0;
+  margin-bottom: 0;
+  line-height: 40px;
+}
+
+h1.page-title {
+    margin: 40px 0;
 }
