--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -4,16 +4,19 @@
       <h2 class="predictions-heading">Prediction Submission</h2>
 
       <textarea name="predictions" id="predictions" class="form-control" form="submission-form" rows="10"
-        placeholder="Copy paste your csv file (along with the headers) here as it is" required autofocus></textarea>
+        placeholder="Copy paste your csv file (along with the headers) here as it is..." required autofocus></textarea>
+
+      <textarea name="code" id="code" class="form-control" form="submission-form" rows="10"
+        placeholder="Copy paste your code here as it is..." required autofocus></textarea>
+
       <button class="btn btn-lg btn-primary btn-block" type="submit">Submit</button>
     </form>
 
     <div id="submission-result">
       {% if scores %}
         <p id="submission-score">
-          Submission Successful. 
-          Precision: {{ scores.precision | safe }},
-          Recall: {{ scores.recall | safe }},
+          Precision: {{ scores.precision | safe }} </br>
+          Recall: {{ scores.recall | safe }} </br>
           F1: {{ scores.F1 | safe }}
         </p>
       {% endif %}
