--- a/templates/base.html
+++ b/templates/base.html
@@ -26,8 +26,8 @@
         <nav>
           <ul class="nav nav-pills pull-right">
             <li role="presentation"><a href="/">Dashboard</a></li>
-            <li role="presentation"><a href="/login">Login</a></li>
             <li role="presentation"><a href="/leaderboard">Leaderboard</a></li>
+            <li role="presentation"><a href="/logout">Logout</a></li>
           </ul>
         </nav>
         <h3 class="text-muted">Instabase</h3>
