--- a/templates/base.html
+++ b/templates/base.html
@@ -25,12 +25,13 @@
       <div class="header clearfix">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation"><a href="/">Dashboard</a></li>
+            <li role="presentation" class="active"><a href="/">Dashboard</a></li>
             <li role="presentation"><a href="/leaderboard">Leaderboard</a></li>
             <li role="presentation"><a href="/logout">Logout</a></li>
           </ul>
         </nav>
-        <h3 class="text-muted">Instabase</h3>
+        <h3 class="text-muted">instabase </h3>
+        <span class="tagline">Entity Resolution never been so fun!</span>
       </div>
 
       {% with messages = get_flashed_messages(with_categories=true) %}
