--- a/templates/base.html
+++ b/templates/base.html
@@ -9,8 +9,10 @@
 
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href="/static/css/prism.css">
     <!-- custom -->
     <link rel="stylesheet" href="/static/css/main.css">
+    
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -30,7 +32,7 @@
             <li role="presentation"><a href="/logout">Logout</a></li>
           </ul>
         </nav>
-        <h3 class="text-muted">instabase </h3>
+        <h3 class="text-muted"><a href="/">instabase</a></h3>
         <span class="tagline">Entity Resolution never been so fun!</span>
       </div>
 
