--- a/templates/base.html
+++ b/templates/base.html
@@ -47,6 +47,12 @@
       {% block content %} {% endblock %}
     </div>
 
+    <footer class="footer">
+      <div class="container">
+        <p class="text-muted">Computer Systems for Data Science | Columbia University - Data Science Institute.</p>
+      </div>
+    </footer>
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
