--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -1,12 +1,31 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="row">
-  <div class="col-md-7">
-    <h3>Leaderboard</h3>
+  <div class="col-md-6">
+    <h3>Leaderboard <span class="badge">{{rank}}/{{leaders|count}}</span></h3>
+    <hr />
+    <table class="table table-hover">
+    <thead> 
+      <tr>
+        <th>Rank</th> 
+        <th>Name</th> 
+        <th>F1 Measure</th> 
+      </tr> 
+    </thead>
+    <tbody>
+    {% for leader in leaders %}
+      <tr class="{% if leader.email == email %}{{"highlight-me"}}{% endif %}">
+        <th>{{ loop.index }}</th>
+        <th> {{ leader.name }}</th>
+        <th>{{ "%.6f" | format(leader.F1) }}</th>
+      </tr>
+    {% endfor %}
+    </tbody>
+    </table>
     <hr />
   </div>
 
-  <div class="col-md-5">
+  <div class="col-md-6">
     <h3>Stats</h3>
     <hr />
   </div>
