added page nav highlight

--- a/templates/base.html
+++ b/templates/base.html
@@ -27,8 +27,8 @@
       <div class="header clearfix">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation" class="active"><a href="/">Dashboard</a></li>
-            <li role="presentation"><a href="/leaderboard">Leaderboard</a></li>
+            <li role="presentation" class={% if page == "dashboard" %}{{"active"}} {% endif %}><a href="/">Dashboard</a></li>
+            <li role="presentation" class={% if page == "leaderboard" %}{{"active"}} {% endif %}><a href="/leaderboard">Leaderboard</a></li>
             <li role="presentation"><a href="/logout">Logout</a></li>
           </ul>
         </nav>
