--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -1,7 +1,13 @@
 {% extends "base.html" %}
 {% block content %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js" type="text/javascript"></script>
+<script type="text/javascript"> var data = {{ scores }}; </script>
 <div class="row">
+  <div class="col-md-12" id="tracker-msg">
+    <div class="alert alert-info">
+      <p>The leaderboard has changed since you last loaded this page. Please <a href="/leaderboard">reload</a> to see the new changes</p>
+    </div>
+  </div>
   <div class="col-md-6">
     <h3>Leaderboard <span class="badge">{{rank}}/{{leaders|count}}</span></h3>
     <hr />
@@ -35,51 +41,6 @@
     <canvas id="histo" width="400" height="200"></canvas>
   </div>
 </div>
-
-<script type="text/javascript">
-var scores = {{ scores }};
-var ctx = document.getElementById("trend").getContext("2d");
-var ranks = [];
-var histogram = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0];
-for (var i = 1; i <= scores.length; i++) {
-  ranks.push(i);
-  var index = parseInt(scores[i-1] / 10);
-  histogram[index] += 1;
-  scores[i-1] = +scores[i-1].toFixed(2)
-}
-var data = {
-    labels: ranks,
-    datasets: [
-        {
-            label: "My first dataset",
-            fillColor: "rgba(220,220,220,0.2)",
-            strokeColor: "rgba(220,220,220,1)",
-            pointColor: "rgba(220,220,220,1)",
-            pointStrokeColor: "#fff",
-            pointHighlightFill: "#fff",
-            pointHighlightStroke: "rgba(220,220,220,1)",
-            data: scores
-        }
-    ]
-};
-var myNewChart = new Chart(ctx).Line(data);
-
-var histodata = {
-    labels: ["0-10", "10-20", "20-30", "30-40", "40-50", "50-60", "60-70", "70-80", "80-90", "90-100"],
-    datasets: [
-        {
-            label: "My first dataset",
-            fillColor: "rgba(220,220,220,0.2)",
-            strokeColor: "rgba(220,220,220,1)",
-            pointColor: "rgba(220,220,220,1)",
-            pointStrokeColor: "#fff",
-            pointHighlightFill: "#fff",
-            pointHighlightStroke: "rgba(220,220,220,1)",
-            data: histogram
-        }
-    ]
-}
-var ctx2 = document.getElementById("histo").getContext("2d");
-var myhistochart = new Chart(ctx2).Bar(histodata);
-</script>
+<script src="/static/js/reconnecting-websocket.min.js" type="text/javascript"></script>
+<script src="/static/js/app.js" type="text/javascript"></script>
 {% endblock %}
