--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,5 @@
+.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}
+
 html {
   position: relative;
   min-height: 100%;
@@ -118,4 +120,10 @@ canvas#trend {
 
 div#tracker-msg {
     display: none;
+}
+
+p.text-muted {
+    border-top: 1px solid #eee;
+    padding-top: 10px;
+    text-align: center;
 }
