--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -9,7 +9,11 @@
     </div>
   </div>
   <div class="col-md-6">
-    <h3>Leaderboard <span class="badge">{{rank}}/{{leaders|count}}</span></h3>
+    <h3>Leaderboard 
+      {% if rank %}
+        <span class="badge">{{rank}}/{{leaders|count}}</span>
+      {% endif %}
+    </h3>
     <hr />
     <table class="table table-hover">
     <thead>
@@ -33,7 +37,7 @@
   </div>
 
   <div class="col-md-6">
-    <h3>Stats</h3>
+    <h3>Statistics</h3>
     <hr />
     <p class="chart-title">F1 Measure vs Ranks</p>
     <canvas id="trend" width="400" height="200"></canvas>
