leaderboard update changes complete. full table refresh

--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -4,7 +4,7 @@
 <div class="row">
   <div class="col-md-12" id="tracker-msg">
     <div class="alert alert-info">
-      <p>The leaderboard has changed since you last loaded this page. Please <a href="/leaderboard">reload</a> to see the new changes</p>
+      <p>The leaderboard has been updated</p>
     </div>
   </div>
 
@@ -43,7 +43,6 @@
     <canvas id="histo" width="400" height="200"></canvas>
   </div>
 </div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/1.0.17/vue.js" type="text/javascript"></script>
 <script src="/static/js/reconnecting-websocket.min.js" type="text/javascript"></script>
 <script src="/static/js/app.js" type="text/javascript"></script>
